[package]
name = "denshin"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Denshin (電信) — WebSocket gateway: connection management, room-based broadcasting, event multiplexing"
homepage = "https://github.com/pleme-io/denshin"
repository = "https://github.com/pleme-io/denshin"
documentation = "https://docs.rs/denshin"
readme = "README.md"
license = "MIT"
categories = ["web-programming::websocket", "network-programming"]
keywords = ["websocket", "gateway", "broadcast", "rooms", "events"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
